# ComptabilityProject

./: .env.example  .gitignore  AUDIT_COMPLETE_PIPELINE_PHASE5.md  AUDIT_FISCAL_DUPLICATION.md  AUDIT_LLM_CONTEXT_FIELDS.md  AUDIT_RULES_ALIGNMENT.md  CLAUDE.md  CORRECTIONS_P0_PHASE5.md  END_TO_END_PROCESS_REVIEW.md  P0_VALIDATION.md  P1_P2_VALIDATION.md  PHASE_7_FULL_AUDIT_REPORT.md  PRE_PHASE7_DEEP_ANALYSIS.md  PR_AUDIT_CORRECTIONS.md  PR_CONTENT.md  PR_OPTION_C.md  PR_PHASE2.md  PR_PHASE3.md  PR_PHASE4.md  PR_PHASE5_DESCRIPTION.md  PR_PHASE6_INTEGRATION.md  PR_SECURITY_PHASE5.md  PYDANTIC_MODELS_AUDIT.md  README.md  REFACTORING_PLAN_TAX_UTILS.md  REVUE_TECHNIQUE_LLM_PHASE5.md  SECURITY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW_PHASE5.md  TESTING.md  TESTING_GUIDE.md  alembic.ini  demo_end_to_end.py  main.py  pyproject.toml  test_api.py  test_llm_request.json  test_quick.py  test_request.json  (+1 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
_bmad/: config.yaml  workflows.md
_bmad/templates/: architecture.md  prd-lite.md  task-breakdown.yaml
alembic/: env.py
alembic/versions/: c9cb3e53add4_initial_migration.py  d453b9b0768c_add_conversations_and_messages_tables_.py  e322d8aeba5e_standardize_field_names_to_french_.py
audits/: audit-2026-01-20-bmad-agentic-governance.md  audit-2026-01-20-comprehensive-code-review.md  audit-2026-01-20-p2-fixes.md  audit-2026-01-20-tax-engine-changes.md
docs/: LANDING_PAGE_FEATURE.md  phase4.md  project-context.md  sources.md
docs/agents/: AGENTS.md  agent-relevance-matrix.md  available-agents-inventory.md  baseline-v1.0.md  decisions.md  expanded-inventory.md  friction-map.md  questions-clustered.md  simulations.md  synthesis.md  wealon-perspective.md  yoni-perspective.md
docs/planning/: TEMPLATES.md
frontend/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  error-boundary.tsx  legal-disclaimer.tsx  onboarding.tsx
frontend/lib/: api.ts
prompts/: metadata.json
prompts/examples/: few_shot_per.md  few_shot_regime.md
prompts/system/: base.md  safety.md  tax_expert.md
prompts/templates/: analysis_request.jinja2
scripts/: verify_baremes.py
src/: config.py  main.py
src/analyzers/: __init__.py  optimizer.py
src/api/: auth.py  dependencies.py
src/audit/: __init__.py  audit_logger.py
src/database/: base.py  session.py
src/extractors/: ocr_extractor.py  pdf_extractor.py
src/llm/: __init__.py  context_builder.py  conversation_manager.py  exceptions.py  llm_client.py  llm_service.py  prompt_loader.py
src/models/: __init__.py  comparison.py  extracted_fields.py  extraction_confidence.py  fiscal_profile.py  freelance_profile.py  llm_context.py  llm_message.py  optimization.py  recommendation.py  strategy_interdependencies.py  tax_calculation.py  tax_document.py
src/security/: __init__.py  file_validator.py  llm_sanitizer.py
src/services/: __init__.py  data_mapper.py  document_service.py  file_storage.py  validation.py
src/tax_engine/: calculator.py  core.py  rules.py  tax_utils.py
tests/: conftest.py  test_api_health.py  test_cehr_cdhr.py  test_database.py  test_extractors.py  test_file_storage.py  test_integration_end_to_end.py  test_main.py  test_optimization.py  test_per_plafond_sync.py  test_tax_engine.py  test_tax_engine_core_enhanced.py  test_tax_utils.py
tests/llm/: __init__.py  test_context_builder_benefice.py
tests/security/: __init__.py  test_file_validation.py  (+2 more)
(+45 files in other folders)
